fixed `1 to 3` spells overflowing

--- a/styles/actions.scss
+++ b/styles/actions.scss
@@ -139,7 +139,7 @@
                     img {
                         height: 100%;
                         border: 0;
-                        background: #c9c5b1;
+                        mix-blend-mode: color-burn;
                     }
                 }
 
