--- a/styles/hud.scss
+++ b/styles/hud.scss
@@ -124,7 +124,7 @@
             .extras {
                 display: flex;
                 justify-content: space-between;
-                gap: 30px;
+                gap: 6px;
                 height: 50%;
 
                 .actions {
